<resources>
    <string name="app_name">Location Track Client</string>
    <string name="location_updated_message">location changexx</string>
    <string name="Id">User ID</string>
    <string name="pswd">Password</string>
    <string name="submit">Submit</string>
    <string name="ticker_text">Something</string>
    <string name="notification_message" />
    <string name="loading">LOaDiNG</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="signed_out">Signed out</string>
    <string name="emailpassword_title_text">Email Password Title</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="label_emailpassword">Email Password</string>
    <string name="enter_user_name">Enter User</string>
    <string name="update_user">Update User</string>
</resources>
