<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:weightSum="4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/background"
        android:orientation="vertical">


        <TextView
            android:visibility="gone"
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:visibility="gone"
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />
        <TextView
            android:visibility="gone"
            android:id="@+id/username"
            style="@style/ThemeOverlay.MyTextDetail"
            />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#E0E0E0"
        android:gravity="center_vertical">



        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">



            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">



            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <EditText
                android:visibility="gone"
                android:id="@+id/edit_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_name"
                android:inputType="textPersonName" />
            <Button
                android:id="@+id/submit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_user"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />


    </RelativeLayout>














</LinearLayout>
